--- a/index.html
+++ b/index.html
@@ -23,18 +23,11 @@
   <body>
     <main class="main">
       <div class="main-content">
-        <div class="logo">
-          <h3><i class="fa-solid fa-code"></i>First Brackets</h3>
+        <div class="header">
+          <div class="logo">
+            <h3><i class="fa-solid fa-code"></i>First Brackets</h3>
+          </div>
         </div>
-        <nav class="nav">
-          <ul class="nav-list">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Tour</a></li>
-            <li><a href="#">Courses</a></li>
-            <li><a href="#">Articles</a></li>
-            <li><a href="#">Blog</a></li>
-          </ul>
-        </nav>
         <div class="text-intro">
           <h1>
             <span class="colored">Learn</span> to code. <br />
@@ -45,12 +38,21 @@
         <button class="btn main-btn">
           <i class="fa-solid fa-circle-play"></i>Watch Demo
         </button>
+        <nav class="nav">
+          <ul class="nav-list">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Tour</a></li>
+            <li><a href="#">Courses</a></li>
+            <li><a href="#">Articles</a></li>
+            <li><a href="#">Blog</a></li>
+          </ul>
+        </nav>
       </div>
       <div class="side">
         <div class="heading">
           <h2>Join over 25 million learners from around the globe</h2>
           <p>
-            Master the language of the web: HTML, CSS and JavaScript. This Path
+            Master the language of the web: <span class="colored">HTML, CSS</span> and <span class="colored">JavaScript</span>. This Path
             will prepare you to build basic websites and then build interactive
             web apps.
           </p>
@@ -90,7 +92,7 @@
               <input type="checkbox" name="terms" id="terms" />
               <label for="terms">
                 I agree to all statements included in
-                <strong><a href="#">Terms of Use</a></strong>
+                <strong><a href="#">Terms of Service</a></strong>
               </label>
             </div>
             <input
