fix typography issue

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
       <div class="main-content">
         <div class="header">
           <div class="logo">
-            <h3><i class="fa-solid fa-code"></i>Jem Sync</h3>
+            <h3>
+              <a href="#"><i class="fa-solid fa-code"></i>Jem Sync</a>
+            </h3>
           </div>
         </div>
         <div class="text-intro">
