--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             type="submit"
             value="Start Coding Now"
           />
-          <p class="inner-sub">Or continue with this social profile</p>
+          <p class="inner-sub">Or continue with these social profiles</p>
           <ul class="list-btn">
             <li>
               <span class="btn-social">
